[package]
authors = ["Zac Stewart <zgstewart@gmail.com>"]
description = "A simple STUN client library and command line tool"
homepage = "https://github.com/zacstewart/stun"
keywords = ["stun", "client", "nat", "traversal"]
license = "MIT"
name = "stun"
readme = "README.md"
repository = "https://github.com/zacstewart/stun"
version = "0.0.2"

[lib]
name = "stun"
path = "src/lib.rs"

[[bin]]
name = "stun"
path = "src/main.rs"

[dependencies]

rand = "0.3.14"
